--- a/css/main.css
+++ b/css/main.css
@@ -10325,6 +10325,7 @@ ul.pagination li.disabled span {
     padding-right: 12px;
 }
 .header-list__drop-block__content__cell svg {
+  width: 24px;
   margin-right: 12px;
   transition-property: all;
   transition-duration: 0.2s;
